# nonebot-plugin-helltide

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt
nonebot_plugin_helltide/: __init__.py  config.py
