[tool.poetry]
name = "nonebot-plugin-helltide"
version = "0.1.0"
description = "Diablo 4 Helltide Event Tracker work with nonebot2"
authors = ["qbkira <qbuouo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_helltide"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = {version = "^2.0.0b4", extras = ["fastapi"]}
nonebot-adapter-onebot = "^2.0.0b1"
nonebot-plugin-apscheduler = "^0.2.0"
aiohttp = "^3.8.1"


[tool.pdm.build]
includes = [
    "nonebot_plugin_helltide",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot-plugin-helltide"]
plugin_dirs = []
builtin_plugins = []


[project]
name = "nonebot-plugin-helltide"
version = "0.1.0"
description = "Diablo 4 Helltide Event Tracker work with nonebot2"
authors = [
    {name = "qbkira", email = "qbuouo@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/QBkira/nonebot-plugin-helltide"
repository = "https://github.com/QBkira/nonebot-plugin-helltide/tree/master/nonebot_plugin_helltide"
documentation = "https://github.com/QBkira/nonebot-plugin-helltide#readme"
